--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
         <!-- Add your site or application content here -->
@@ -16,4 +16,4 @@
 
         <script src="js/app.js"></script>
     </body>
-</html>"
+</html>
